<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_documentation"
        android:icon="@drawable/quick_reference"
        android:title="@string/title_documentation" />

    <item
        android:id="@+id/navigation_monitoring"
        android:icon="@drawable/ic_monitor"
        android:title="@string/title_monitoring" />

    <item
        android:id="@+id/navigation_tasks"
        android:icon="@drawable/ic_calendar"
        android:title="@string/title_tasks" />

    <item
        android:id="@+id/navigation_utilities"
        android:icon="@drawable/ic_utilities"
        android:title="@string/title_utilities" />

    <item
        android:id="@+id/settings"
        android:title="@string/action_settings_title"
        android:icon="@drawable/ic_action_settings"
        app:showAsAction="ifRoom" />



</menu>