<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_monitoring">

    <fragment
        android:id="@+id/navigation_documentation"
        android:name="com.example.edna.ui.documentation.DocumentationFragment"
        android:label="@string/title_documentation"
        tools:layout="@layout/fragment_documentation" />

    <fragment
        android:id="@+id/navigation_monitoring"
        android:name="com.example.edna.ui.monitoring.MonitoringFragment"
        android:label="@string/title_monitoring"
        tools:layout="@layout/fragment_monitoring" />

    <fragment
        android:id="@+id/navigation_tasks"
        android:name="com.example.edna.ui.tasks.TasksFragment"
        android:label="@string/title_tasks"
        tools:layout="@layout/fragment_tasks">
        <action
            android:id="@+id/navigation_to_add_task"
            app:destination="@id/add_task"
            />
    </fragment>

    <fragment
        android:id="@+id/add_task"
        android:name="com.example.edna.ui.tasks.AddTaskFragment"
        android:label="@string/title_add_tasks"
        tools:layout="@layout/fragment_add_task" />

    <fragment
        android:id="@+id/navigation_utilities"
        android:name="com.example.edna.ui.utilities.UtilitiesFragment"
        android:label="@string/title_utilities"
        tools:layout="@layout/fragment_utilities" />
</navigation>